2008-06-30  Sam Steingold  <sds@gnu.org>

	fix bug #[ 2002364 ]: XID reuse causes clx cache to get out of sync
	* modules/clx/new-clx/clx.f (make_xid_obj_2): when the cached
	object is of the wrong type, signal a continuable error and offer
	to invalidate either the cache entry or the whole cache
	* lispbibl.d (correctable_error): export to clisp.h

2008-06-30  Sam Steingold  <sds@gnu.org>

	fix bug #[ 2007052 ] socket-connect with :timeout to a dead port
	* socket.d (connect_via_ip): use getsockopt() to check the status
	of the socket before returning it, as described in the linux man page

2008-06-29  Sam Steingold  <sds@gnu.org>

	* version.sh: 2.45++: pretest [+ gnulib-imported build-aux-update]

2008-06-29  Sam Steingold  <sds@podval.org>

	* modules/libsvm: upgraded to upstream 2.86

2008-06-28  Sam Steingold  <sds@gnu.org>

	* version.sh: new version number convention: VERSION_NUMBER is
	  = MAJOR.MINOR for release,
	  = MAJOR.MINOR+ for development, and
	  = MAJOR.MINOR++ for pretest
	RELEASE_DATE is the date when VERSION_NUMBER was modified.
	Set to 2.45+/2008-06-28

2008-06-28  Sam Steingold  <sds@gnu.org>

	* configure: fail if FFI modules are specified
	but FFCALL is not available

2008-06-28  Sam Steingold  <sds@gnu.org>

	* modules/netica/link.sh (NEW_LIBS): add -lpthread

2008-06-28  Sam Steingold  <sds@gnu.org>

	* utils/modprep.lisp (init-to-tag):
	bind *PRINT-LINES* when printing huge tags

2008-06-27  Sam Steingold  <sds@gnu.org>

	* spvw_debug.d (nobject_out1): use symbol_without_flags when
	printing a symbol

2008-06-27  Sam Steingold  <sds@gnu.org>

	fix special bindings in evaluated code on 64bit platforms
	* control.d (specdecled_) [!NO_symbolflags]: use
	symbol_without_flags when comparing symbols

2008-06-27  Sam Steingold  <sds@gnu.org>

	* constsym.d, control.d, eval.d, fsubr.d, io.d, lisparit.d:
	* package.d, predtype.d, spvw.d, spvw_allocate.d, spvw_language.d
	(let*, *package*, *readtable*, *evalhook*, *applyhook*)